--- a/estilo/pushbar.css
+++ b/estilo/pushbar.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+
 html.pushbar_locked {
   overflow: hidden;
   -ms-touch-action: none;
